--- a/exercises_GVN465/ex3.ipynb
+++ b/exercises_GVN465/ex3.ipynb
@@ -416,8 +416,8 @@
     "\n",
     "# save original and interpolated fields for Jan 2000\n",
     "np.save('airJan', airJan)\n",
-    "np.save('thetaJan', airJan)\n",
-    "np.save('airJan_int', airJan_int)\n",
+    "np.save('thetaJan', thetaJan)\n",
+    "np.save('airJan_int', airJanJan_int)\n",
     "np.save('thetaJan_int', thetaJan_int)\n",
     "\n",
     "# save corresponding coordinates\n",
@@ -1677,7 +1677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
